Update models for take home challenge

--- a/take_home_challenge/take_home_challenge_viethngn.ipynb
+++ b/take_home_challenge/take_home_challenge_viethngn.ipynb
@@ -867,19 +867,28 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'criterion': 'gini',\n 'max_depth': 50,\n 'max_features': 0.05,\n 'min_samples_leaf': 2,\n 'min_samples_split': 2}"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# prob_forest_search.best_params_"
+    "prob_forest_search.best_params_"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-14T23:52:49.267561Z",
-     "start_time": "2024-04-14T23:52:49.263225Z"
+     "end_time": "2024-04-15T00:07:51.515866Z",
+     "start_time": "2024-04-15T00:07:51.466683Z"
     }
    },
    "id": "4523ee1a174316fc",
-   "execution_count": 21
+   "execution_count": 48
   },
   {
    "cell_type": "code",
